generated/DeepLearningDSLParser.py
# Generated from grammar/DeepLearningDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DeepLearningDSLParser ( Parser ):

    grammarFileName = "DeepLearningDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'while'", 
                     "'def'", "'return'", "'linear_regression'", "'mlp_classifier'", 
                     "'neural_network'", "'predict'", "'train'", "'kmeans'", 
                     "'fit_predict'", "'get_centroids'", "'autoencoder'", 
                     "'encode'", "'decode'", "'reconstruct'", "'reconstruction_error'", 
                     "'transpose'", "'inverse'", "'matmult'", "'matadd'", 
                     "'matsub'", "'read_file'", "'write_file'", "'print'", 
                     "'plot'", "'scatter'", "'histogram'", "'sin'", "'cos'", 
                     "'tan'", "'sqrt'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "WHILE", "DEF", 
                      "RETURN", "LINEAR_REGRESSION", "MLP_CLASSIFIER", "NEURAL_NETWORK", 
                      "PREDICT", "TRAIN", "KMEANS", "FIT_PREDICT", "GET_CENTROIDS", 
                      "AUTOENCODER", "ENCODE", "DECODE", "RECONSTRUCT", 
                      "RECONSTRUCTION_ERROR", "TRANSPOSE", "INVERSE", "MATMULT", 
                      "MATADD", "MATSUB", "READ_FILE", "WRITE_FILE", "PRINT", 
                      "PLOT", "SCATTER", "HISTOGRAM", "SIN", "COS", "TAN", 
                      "SQRT", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "POWER", "EQ", "NE", "LT", "LE", "GT", "GE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "COMMA", "SEMICOLON", "NUMBER", "FLOAT", 
                      "STRING", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_assignment = 3
    RULE_expression = 4
    RULE_expr_rest = 5
    RULE_term = 6
    RULE_term_rest = 7
    RULE_factor = 8
    RULE_factor_rest = 9
    RULE_base = 10
    RULE_unary_expr = 11
    RULE_trig_func = 12
    RULE_list_or_matrix_expr = 13
    RULE_list_or_matrix_content = 14
    RULE_list_or_matrix_content_rest = 15
    RULE_list_or_matrix_row = 16
    RULE_expression_list = 17
    RULE_expression_list_rest = 18
    RULE_matrix_operation = 19
    RULE_conditional = 20
    RULE_else_part = 21
    RULE_condition = 22
    RULE_rel_op = 23
    RULE_loop = 24
    RULE_for_loop = 25
    RULE_while_loop = 26
    RULE_function_def = 27
    RULE_param_list = 28
    RULE_param_list_rest = 29
    RULE_return_stmt = 30
    RULE_function_call = 31
    RULE_arg_list = 32
    RULE_arg_list_rest = 33
    RULE_ml_function = 34
    RULE_io_function = 35
    RULE_plot_function = 36

    ruleNames =  [ "program", "statement_list", "statement", "assignment", 
                   "expression", "expr_rest", "term", "term_rest", "factor", 
                   "factor_rest", "base", "unary_expr", "trig_func", "list_or_matrix_expr", 
                   "list_or_matrix_content", "list_or_matrix_content_rest", 
                   "list_or_matrix_row", "expression_list", "expression_list_rest", 
                   "matrix_operation", "conditional", "else_part", "condition", 
                   "rel_op", "loop", "for_loop", "while_loop", "function_def", 
                   "param_list", "param_list_rest", "return_stmt", "function_call", 
                   "arg_list", "arg_list_rest", "ml_function", "io_function", 
                   "plot_function" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    WHILE=4
    DEF=5
    RETURN=6
    LINEAR_REGRESSION=7
    MLP_CLASSIFIER=8
    NEURAL_NETWORK=9
    PREDICT=10
    TRAIN=11
    KMEANS=12
    FIT_PREDICT=13
    GET_CENTROIDS=14
    AUTOENCODER=15
    ENCODE=16
    DECODE=17
    RECONSTRUCT=18
    RECONSTRUCTION_ERROR=19
    TRANSPOSE=20
    INVERSE=21
    MATMULT=22
    MATADD=23
    MATSUB=24
    READ_FILE=25
    WRITE_FILE=26
    PRINT=27
    PLOT=28
    SCATTER=29
    HISTOGRAM=30
    SIN=31
    COS=32
    TAN=33
    SQRT=34
    ASSIGN=35
    PLUS=36
    MINUS=37
    MULT=38
    DIV=39
    MOD=40
    POWER=41
    EQ=42
    NE=43
    LT=44
    LE=45
    GT=46
    GE=47
    LPAREN=48
    RPAREN=49
    LBRACE=50
    RBRACE=51
    LBRACKET=52
    RBRACKET=53
    COMMA=54
    SEMICOLON=55
    NUMBER=56
    FLOAT=57
    STRING=58
    ID=59
    WS=60
    COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Statement_listContext,0)


        def EOF(self):
            return self.getToken(DeepLearningDSLParser.EOF, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DeepLearningDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.statement_list()
            self.state = 75
            self.match(DeepLearningDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.StatementContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Statement_listContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = DeepLearningDSLParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 37, 48, 52, 56, 57, 58, 59]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.statement()
                self.state = 78
                self.statement_list()
                pass
            elif token in [-1, 6, 51]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(DeepLearningDSLParser.SEMICOLON, 0)

        def conditional(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.LoopContext,0)


        def function_def(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_defContext,0)


        def function_call(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_callContext,0)


        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DeepLearningDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.assignment()
                self.state = 84
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.conditional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.loop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.function_def()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.function_call()
                self.state = 90
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.expression()
                self.state = 93
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningDSLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningDSLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = DeepLearningDSLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(DeepLearningDSLParser.ID)
            self.state = 98
            self.match(DeepLearningDSLParser.ASSIGN)
            self.state = 99
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.TermContext,0)


        def expr_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Expr_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = DeepLearningDSLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.term()
            self.state = 102
            self.expr_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(DeepLearningDSLParser.PLUS, 0)

        def term(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.TermContext,0)


        def expr_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Expr_restContext,0)


        def MINUS(self):
            return self.getToken(DeepLearningDSLParser.MINUS, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_expr_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_rest" ):
                listener.enterExpr_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_rest" ):
                listener.exitExpr_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_rest" ):
                return visitor.visitExpr_rest(self)
            else:
                return visitor.visitChildren(self)




    def expr_rest(self):

        localctx = DeepLearningDSLParser.Expr_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expr_rest)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(DeepLearningDSLParser.PLUS)
                self.state = 105
                self.term()
                self.state = 106
                self.expr_rest()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(DeepLearningDSLParser.MINUS)
                self.state = 109
                self.term()
                self.state = 110
                self.expr_rest()
                pass
            elif token in [42, 43, 44, 45, 46, 47, 49, 53, 54, 55]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.FactorContext,0)


        def term_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Term_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = DeepLearningDSLParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.factor()
            self.state = 116
            self.term_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(DeepLearningDSLParser.MULT, 0)

        def factor(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.FactorContext,0)


        def term_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Term_restContext,0)


        def DIV(self):
            return self.getToken(DeepLearningDSLParser.DIV, 0)

        def MOD(self):
            return self.getToken(DeepLearningDSLParser.MOD, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_term_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_rest" ):
                listener.enterTerm_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_rest" ):
                listener.exitTerm_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm_rest" ):
                return visitor.visitTerm_rest(self)
            else:
                return visitor.visitChildren(self)




    def term_rest(self):

        localctx = DeepLearningDSLParser.Term_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term_rest)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(DeepLearningDSLParser.MULT)
                self.state = 119
                self.factor()
                self.state = 120
                self.term_rest()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(DeepLearningDSLParser.DIV)
                self.state = 123
                self.factor()
                self.state = 124
                self.term_rest()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(DeepLearningDSLParser.MOD)
                self.state = 127
                self.factor()
                self.state = 128
                self.term_rest()
                pass
            elif token in [36, 37, 42, 43, 44, 45, 46, 47, 49, 53, 54, 55]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.BaseContext,0)


        def factor_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Factor_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = DeepLearningDSLParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.base()
            self.state = 134
            self.factor_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Factor_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POWER(self):
            return self.getToken(DeepLearningDSLParser.POWER, 0)

        def base(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.BaseContext,0)


        def factor_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Factor_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_factor_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor_rest" ):
                listener.enterFactor_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor_rest" ):
                listener.exitFactor_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor_rest" ):
                return visitor.visitFactor_rest(self)
            else:
                return visitor.visitChildren(self)




    def factor_rest(self):

        localctx = DeepLearningDSLParser.Factor_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor_rest)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(DeepLearningDSLParser.POWER)
                self.state = 137
                self.base()
                self.state = 138
                self.factor_rest()
                pass
            elif token in [36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 49, 53, 54, 55]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningDSLParser.ID, 0)

        def NUMBER(self):
            return self.getToken(DeepLearningDSLParser.NUMBER, 0)

        def FLOAT(self):
            return self.getToken(DeepLearningDSLParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(DeepLearningDSLParser.STRING, 0)

        def LPAREN(self):
            return self.getToken(DeepLearningDSLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DeepLearningDSLParser.RPAREN, 0)

        def list_or_matrix_expr(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.List_or_matrix_exprContext,0)


        def function_call(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_callContext,0)


        def unary_expr(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Unary_exprContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = DeepLearningDSLParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_base)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(DeepLearningDSLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(DeepLearningDSLParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.match(DeepLearningDSLParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(DeepLearningDSLParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.match(DeepLearningDSLParser.LPAREN)
                self.state = 148
                self.expression()
                self.state = 149
                self.match(DeepLearningDSLParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.list_or_matrix_expr()
                pass
